# python_starter_project

./: .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  docker-compose.yaml  justfile  pyproject.toml  tach.toml
api/: db.py  ioc.py  main.py
api/users/: exception_handlers.py  user.py
database/: alembic.ini  db.py
database/alembic/: env.py
extra/gitlint_rules/: commit-message-match-regex.py
ioc/: ioc.py
migrations/: env.py
migrations/versions/: 249bdcf23bbc_add_birth_date_to_user.py  ba721264aad6_add_timestamps_to_the_users_table.py  bda8a9a88fdb_create_users_table.py
python_starter_project/: container.py
python_starter_project/api/: db.py  ioc.py  main.py
python_starter_project/api/users/: __init__.py  exception_handlers.py  routes.py  user.py
python_starter_project/database/: __init__.py  alembic.ini  base_repository.py  db.py  embedded_uuid.py  extensions.py  mixins.py  settings.py  transaction.py
python_starter_project/database/alembic/: env.py
python_starter_project/database/alembic/versions/: ba721264aad6_add_timestamps_to_the_users_table.py  bda8a9a88fdb_create_users_table.py
python_starter_project/ioc/: __init__.py  ioc.py
python_starter_project/shared/: __init__.py  specification.py
python_starter_project/user/: __init__.py  dto.py  entity.py  exceptions.py  facade.py  model.py  postgres_repository.py  repository.py  specifications.py
tests/: conftest.py
tests/acceptance/: conftest.py  steps.py  test_api.py  test_users.py
tests/integration/api/: conftest.py  stubs.py  test_api_general.py  test_user_endpoints.py
tests/user/: test_users_equality.py
user/: exceptions.py  facade.py  model.py  repository.py
