[tool.poetry]
name = "python_starter_project"
version = "0.1.0"
description = "A small template for starting bigger Python-based projects."
authors = ["Nefendi <28621696+Nefendi@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8_bugbear = "^21.4.3"
mypy = "^0.910"
pylint = "^2.10.2"
bandit = "^1.7.0"
pytest = "^6.2.4"
pytest_cov = "^2.12.1"
pre_commit = "^2.14.0"
isort = "^5.9.3"

[build_system]
requires = ["poetry_core>=1.0.0"]
build_backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck_out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"

[tool.mypy]
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_calls = true
warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_configs  = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
implicit_reexport = false
