[project]
name = "python_starter_project"
version = "0.1.0"
description = "A small template for starting bigger Python-based projects."
authors = [{ name = "Nefendi", email = "nefendi.2snfj@slmail.me" }]
requires-python = ">=3.13"
license = { file = "UNLICENSE" }
dependencies = [
  "pydantic>=2.8.2,<3",
  "lagom>=2.6.0,<3",
  "attrs>=23.1.0,<24",
  "sqlalchemy>=2.0.17,<3",
  "alembic>=1.11.1,<2",
  "fastapi[standard]>=0.115.0",
  "psycopg2-binary>=2.9.6,<3",
  "uvicorn[standard]>=0.22.0,<0.23",
  "tenacity>=8.2.2,<9",
  "pendulum>=3.0.0,<4",
  "loguru>=0.7.2,<0.8",
  "pydantic-settings>=2.4.0,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.14.0",
  "pytest>=7.2.1,<8",
  "pytest-cov>=4.0.0,<5",
  "pre-commit>=3.1.0,<4",
  "pytest-randomly>=3.12.0,<4",
  "assertpy~=1.1",
  "pytest-sugar>=0.9.7,<0.10",
  "factory-boy>=3.2.1,<4",
  "coverage[toml]>=7.2.7,<8",
  "hypothesis>=6.80.0,<7",
  "mutmut>=2.4.3,<3",
  "gitlint>=0.19.1,<0.20",
  "pytest-bdd>=6.1.1,<7",
  "pytest-asyncio>=0.21.0,<0.22",
  "tavern>=2.2.0,<3",
  "snakeviz>=2.2.0,<3",
  "httpx>=0.24.1,<0.25",
  "pytest-mockito>=0.0.4,<0.0.5",
  "testcontainers>=3.7.1,<4",
  "pytest-xdist>=3.5.0,<4",
  "ruff>=0.11.11",
  "time-machine>=2.19.0",
  "tach>=0.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "B9", "PT", "I", "UP", "PL"]
ignore = [
  # whitespace before ':', non-compliant with PEP8 and Black
  "E203",
  # line length, ignored because B950 from flake8-bugbear takes care of that
  "E501",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"*/alembic/env.py" = ["F401"]
"*/alembic/versions/*" = ["W291"]

[tool.mypy]
show_column_numbers = true
pretty = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["assertpy.*", "factory.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = "--strict-markers -n auto"
markers = ["slow: marks test as slow"]

[tool.coverage.report]
exclude_lines = ["@abstractmethod", "@abc.abstractmethod"]
show_missing = true

[tool.coverage.run]
branch = true
source = ["python_starter_project/"]
omit = ["*/database/*"]

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"
